k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skyfire-api
  namespace: skyfire
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skyfire-api
  template:
    metadata:
      labels:
        app: skyfire-api
    spec:
      imagePullSecrets:
        - name: ecr-creds

      containers:
        - name: skyfire-api
          image: 182399705651.dkr.ecr.us-east-1.amazonaws.com/skyfire-api:0.1.0
          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
