k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skyfire-api-svc
  namespace: skyfire
spec:
  selector:
    app: skyfire-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
